fix: z-index for innovation section bg image

--- a/blocks/can-help/can-help.css
+++ b/blocks/can-help/can-help.css
@@ -5,4 +5,5 @@
   display: flex;
   flex-flow: column;
   overflow: hidden;
+  z-index: 0;
 }
