--- a/blocks/form/__bg-img/form__bg-img.css
+++ b/blocks/form/__bg-img/form__bg-img.css
@@ -7,4 +7,5 @@
   position: absolute;
   right: 30px;
   bottom: -50px;
+  z-index: -1;
 }
